--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
 									</a>
 								</ul>
 							</div>
-							<h2>Dhritiman Salim</h2>
+							<h2>Dhritiman Shaikh</h2>
 							<h3>Software Engineer</h3>
 
 						</div>
@@ -974,7 +974,7 @@
 									</a>
 								</ul>
 							</div>
-							<h2>Aditi Musunur</h2>
+							<h2>Aditi Roy</h2>
 							<h3>Sales Manager</h3>
 
 						</div>
@@ -995,7 +995,7 @@
 									</a>
 								</ul>
 							</div>
-							<h2>Barsati Sandipa</h2>
+							<h2>Barsati Sandeep</h2>
 							<h3>Project Manager</h3>
 
 						</div>
@@ -1016,7 +1016,7 @@
 									</a>
 								</ul>
 							</div>
-							<h2>Naveen Tikaram</h2>
+							<h2>Navneeth Vikaram</h2>
 							<h3>Founder/CEO</h3>
 
 						</div>
@@ -1050,7 +1050,7 @@
 							</form>
 						</div>
 						<div class="col-md-6 contact-info">
-							<div class="follow"><b><i class="fa fa-map-marker"></i> </b>BNR Building, 34th street, Hadapsar, Pune
+							<div class="follow"><b><i class="fa fa-map-marker"></i> </b>CNR Building, 34th street, Hadapsar, Hyderabad
 							</div>
 							<div class="follow"><b><i class="fa fa-mobile"></i> </b>(+91)8945631245</div>
 							<div class="follow"><b><i class="fa fa-envelope"></i> </b>support@merchstore.com</div>
@@ -1074,7 +1074,7 @@
 
 			</section>
 			<footer id="site-info">
-				Copyright &copy; MerchStore 2021 <br> Made with &#128155; By Uday Girhepunje
+				Copyright &copy; MerchStore 2021 <br> Made with &#128155; By Sai Chaitanya K
 			</footer>
 
 
